# chi-articles-management-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  extensions.py
app/crud/: article.py  user.py
app/models/: __init__.py  article.py  user.py
app/schemas/: article.py  auth.py  user.py
app/utils/: article.py  auth.py  user.py
app/views/: article.py  auth.py  user.py
migrations/versions/: 7bb56ead7068_initial_migration.py
scripts/: populate_db.py
tests/: conftest.py
tests/views/: conftest.py
tests/views/article/: conftest.py  test_create.py  test_delete.py  test_get.py  test_update.py
tests/views/auth/: conftest.py  test_login_view.py  test_logout_view.py  test_refresh_view.py  test_register_view.py
tests/views/user/: test_create.py  test_delete.py  test_get.py  test_update.py
