[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
flask-migrate = "^4.0.7"
flask-jwt-extended = "^4.7.1"
flask-bcrypt = "^1.0.1"
flask-smorest = "^0.45.0"
flask-redis = "^0.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-flask = "^1.3.0"

[tool.black]
line-length = 100
